@@ -393,7 +393,7 @@ save_ebuild_env() {
 	(
 
 		# misc variables set by bash
-		unset BASH HOSTNAME HOSTTYPE IFS MACHTYPE OLDPWD \
+		unset BASH HOSTTYPE IFS MACHTYPE OLDPWD \
 			OPTERR OPTIND OSTYPE PS4 PWD SHELL SHLVL
 
 		# misc variables inherited from the calling environment
@@ -425,7 +425,7 @@ save_ebuild_env() {
 			EBUILD_EXIT_STATUS_FILE EBUILD_MASTER_PID \
 			ECLASSDIR ECLASS_DEPTH ENDCOL FAKEROOTKEY FEATURES \
 			GOOD HILITE HOME IMAGE \
-			KV LAST_E_CMD LAST_E_LEN LD_PRELOAD MISC_FUNCTIONS_ARGS MOPREFIX \
+			LAST_E_CMD LAST_E_LEN LD_PRELOAD MISC_FUNCTIONS_ARGS MOPREFIX \
 			NORMAL PATH PKGDIR PKGUSE PKG_LOGDIR PKG_TMPDIR \
 			PORTAGE_ACTUAL_DISTDIR PORTAGE_ARCHLIST PORTAGE_BASHRC \
 			PORTAGE_BINPKG_TMPFILE PORTAGE_BUILDDIR \
@@ -433,7 +433,8 @@ save_ebuild_env() {
 			PORTAGE_DEPCACHEDIR PORTAGE_GID PORTAGE_INST_GID \
 			PORTAGE_INST_UID PORTAGE_LOG_FILE PORTAGE_MASTER_PID \
 			PORTAGE_REPO_NAME PORTAGE_RESTRICT PORTAGE_WORKDIR_MODE PORTDIR \
-			PORTDIR_OVERLAY PROFILE_PATHS PWORKDIR QA_INTERCEPTORS \
+			PORTDIR_OVERLAY PREROOTPATH \
+			PROFILE_PATHS PWORKDIR QA_INTERCEPTORS \
 			RC_DEFAULT_INDENT RC_DOT_PATTERN RC_ENDCOL \
 			RC_INDENTATION READONLY_EBUILD_METADATA READONLY_PORTAGE_VARS \
 			ROOT ROOTPATH RPMDIR STARTDIR TMP TMPDIR USE_EXPAND \
